<resources>
    <string name="app_name">APS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_points">Customer Points :</string>
    <string name="jhon_murphy">Jhon Murphy</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="edit_your_account">Edit Your Account</string>
    <string name="parking_history">Parking History</string>
    <string name="todo">TODO</string>
    <string name="make_your_own_parking">Make Your Own Parking</string>
    <string name="profile">profile</string>
    <string name="parking">Parking</string>
    <string name="history">history</string>
    <string name="lock">lock</string>
    <string name="Logout">logout</string>
    <string name="pro_pic">pro pic</string>
    <string name="account">account</string>
    <string name="vehicle">Vehicle</string>
    <string name="delete">Delete</string>
    <string name="rs_100_00">Rs 100.00</string>
    <string name="time">Time</string>
    <string name="parking_completed">Parking Completed</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel test</string>
    <string name="done">Done</string>
    <string name="new_password">New Password :</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password :</string>
    <string name="app_name_1">MAD_Project</string>
    <string name="etName">Full Name</string>
    <string name="etEmail">Email Address</string>
    <string name="etMobile">Mobile Number</string>
    <string name="etNic">NIC Number</string>
    <string name="etAddress">Home Address</string>
    <string name="etPassword">Password</string>
    <string name="etPassword2">Confirm Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="linkLogin">Already Registered? Login Here</string>
    <string name="btnSignIn">Log In</string>
    <string name="linkSignIn">New Here? Sign Up Here</string>
    <string name="btnViewFB">See Your Feedback</string>
    <string name="btnFB">Send Feedback</string>
    <string name="FBMessage">Message</string>
    <string name="FBEmail">Email Address</string>
    <string name="FBName">Full Name</string>
    <string name="et_source">Enter Your Location</string>
    <string name="et_destination">Enter your Destination</string>
    <string name="btnDisplay">Display Route</string>
    <string name="topic">APS Parking App</string>
    <string name="header">Create New Account</string>
    <string name="header1">Welcome Back!</string>
    <string name="header2">Feedback</string>
    <string name="header3">Navigate Parking Lot</string>
    <string name="btnlogout">LogOut</string>
</resources>