<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CusView"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/allerta"
        android:text="@string/jhon_murphy"
        android:textColor="#1270BA"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/points"
        android:layout_width="213dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/customer_points"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/CusView"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:layout_width="496dp"
        android:layout_height="438dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UnknownId">

        <androidx.cardview.widget.CardView
            android:layout_width="397dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/edit_your_account"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img1"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:background="#FFFEFD"
                android:contentDescription="@string/account"
                app:srcCompat="@drawable/pers"
                tools:ignore="VectorDrawableCompat" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="397dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/make_your_own_parking"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img2"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_baseline_local_parking_24"
                android:contentDescription="@string/parking" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="397dp"
            android:layout_height="44dp"
            android:layout_margin="20dp"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/parking_history"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img3"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:background="#FFFEFE"
                app:srcCompat="@drawable/history"
                android:contentDescription="@string/history" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="395dp"
            android:layout_height="44dp"
            android:layout_margin="20dp"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="300dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/change_password"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img4"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:background="#FFFCFC"
                app:srcCompat="@drawable/lock"
                android:contentDescription="@string/lock" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="395dp"
            android:layout_height="43dp"
            android:layout_margin="20dp"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/logout"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img5"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:background="#F8F7F7"
                app:srcCompat="@drawable/logout"
                android:contentDescription="@string/logout" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="131dp"
        android:layout_height="150dp"
        android:contentDescription="@string/pro_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/ic_baseline_person"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>