<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="650dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/parking_history"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="593dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="251dp"
            android:layout_margin="20dp"
            android:padding="50dp"
            app:cardBackgroundColor="#D1EAF6">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="213dp"
                android:layout_height="36dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/parking_completed"
                android:textColor="#1333E4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="65dp"
                android:text="@string/date"
                android:textColor="#4E504F"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="65dp"
                android:text="@string/time"
                android:textColor="#4A4949"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="115dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="124dp"
                android:fontFamily="@font/allerta"
                android:text="@string/location"
                android:textColor="#716B6B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="170dp"
                app:srcCompat="@drawable/ic_baseline_directions_car_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="178dp"
                android:fontFamily="@font/allerta"
                android:text="Vehicle"
                android:textColor="#6E6B6B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="40dp"
                android:background="#279BF6"
                app:srcCompat="@drawable/del" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allerta"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="101dp"
                android:layout_height="35dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/allerta"
                android:text="@string/rs_100_00"
                android:textColor="#0C1F88"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="269dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            app:cardBackgroundColor="#D1E9F4">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="213dp"
                android:layout_height="36dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/parking_completed"
                android:textColor="#1333E4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="65dp"
                android:text="@string/date"
                android:textColor="#4E504F"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="65dp"
                android:text="@string/time"
                android:textColor="#4A4949"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="115dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="124dp"
                android:fontFamily="@font/allerta"
                android:text="@string/location"
                android:textColor="#716B6B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="170dp"
                app:srcCompat="@drawable/ic_baseline_directions_car_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="178dp"
                android:fontFamily="@font/allerta"
                android:text="@string/vehicle"
                android:textColor="#6E6B6B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton26"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="40dp"
                android:background="#279BF6"
                app:srcCompat="@drawable/del" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allerta"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="101dp"
                android:layout_height="35dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/allerta"
                android:text="@string/rs_100_00"
                android:textColor="#0C1F88"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>